--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,31 @@ jobs:
         run : |
           mvn clean 
           mvn -B package --file pom.xml
-          
-          
+
+      - name: Build Docker Image
+        uses: actions/build-push-action@v2
+        with:
+          context: .
+          dockerfile : Dockerfile
+          push: false
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-pipeline:$(date-'%Y-%m-%d')
+#push the docker image in docker hub
+
+      - name: Login to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME}}
+          password: ${{secrets.DOCKER_HUB_ACCESS_TOKEN}}
+
+#push the image to docker hub
+      - name: Push to Docker Hub
+        uses: actions/build-push-action@v2
+        context: .
+        dockerfile: Dockerfile
+        push: true
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-pipeline:$(date-'%Y-%m-%d')
+
+
+
 
 
