--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,10 +17,10 @@ jobs:
       #checkout means that github actions will go and copy the code from github(or repository ) and clon it to the runner
       - name: Checkout code
         #means that we want run some actions
-        uses: actions/checkout@v4
+        uses: actions/checkout@v2
 
       - name : SetupJDK 17
-        uses: actions/setup-java@v3
+        uses: actions/setup-java@v2
         with:
           distribution: 'corretto'
           java-version: 17
@@ -34,12 +34,12 @@ jobs:
           mvn -B package --file pom.xml
 
       - name: Build Docker Image
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v2
         with:
           context: .
           dockerfile : Dockerfile
           push: false
-          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-pipeline:$(date + '%Y-%m-%d')
+          tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-pipeline:latest
 #push the docker image in docker hub
 
       - name: Login to Docker Hub
@@ -50,7 +50,7 @@ jobs:
 
 #push the image to docker hub
       - name: Push to Docker Hub
-        uses: docker/build-push-action@v5
+        uses: docker/build-push-action@v2
         context: .
         dockerfile: Dockerfile
         push: true
