--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
         context: .
         dockerfile: Dockerfile
         push: true
-        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-pipeline:$(date-'%Y-%m-%d')
+        tags: ${{ secrets.DOCKER_HUB_USERNAME }}/spring-boot-pipeline:latest
 
 
 
