--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Configuration de JDK 17
         uses: actions/setup-java@v2
         with:
-          #distribution: 'corretto'
+          distribution: 'adopt'
           java-version: 17
 
       - name: Exécuter les tests unitaires
