--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,16 +7,16 @@ services:
       MYSQL_ALLOW_EMPTY_PASSWORD: true
       MYSQL_DATABASE: jwtsecuritybd
     ports:
-      - "3301:3306"
+      - "3304:3306"
     volumes:
       - mysql:/var/lib/mysql
     networks:
       - spring-boot-net
   spring-boot-app:
-    container_name: springDemo
-    image: spring-demo
+    container_name: springDemoPipeline
+    image: samiadaize/spring-boot-pipeline
     ports:
-      - "8080:8080"
+      - "8087:8080"
     networks:
       - spring-boot-net
     depends_on:
