--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   datasource:
-    url: jdbc:mysql://mysqlcontainer/jwtsecuritybd?createDatabaseIfNotExist=true
+    url: jdbc:mysql://mysql:3306/jwtsecuritybd?createDatabaseIfNotExist=true
     username: root
     password:
     driver-class-name: com.mysql.cj.jdbc.Driver
